# cyto-flowQC

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  api.py  cli.py  config.py  data_connectors.md  data_connectors.py  dvc.yaml  exceptions.py  experiment_design.md  experiment_design.py  gate.py  generate_api_docs.py  high_performance.py  io.py  launcher.py  mkdocs.yml  ml_plugins.py  params.yaml  py.typed  pyproject.toml  qc.py  realtime.py  report.py  report_generator.py  sample_data.dvc  security.md  security.py  test_benchmarks.py  test_data_connectors.py  test_data_generation.py  test_experiment_design.py  test_integration.py  test_property_based.py  test_security.py  utils.py  (+1 more)
decisions/: 001-modular-pipeline-architecture.md
docs/: architecture.md  data_connectors.md  experiment_design.md  generate_api_docs.py  index.md  security.md
docs/decisions/: 001-modular-pipeline-architecture.md
docs/examples/: advanced_configuration.py  basic_workflow.py
docs/guides/: performance.md  troubleshooting.md
docs/plugins/: README.md
example_plugin/: README.md  pyproject.toml
example_plugin/src/cytoflow_qc_custom_gating/: gating.py
examples/: advanced_configuration.py  basic_workflow.py
guides/: performance.md  troubleshooting.md
plugins/: README.md  __init__.py  base.py  qc.py  registry.py  stats.py
plugins/examples/: custom_gating.py  custom_stats.py
scripts/: setup_dev.sh
src/cytoflow_qc/: __init__.py  api.py  cli 2.py  cli.py  compensate.py  config.py  configure.py  data_connectors.py  drift.py  exceptions.py  gate 2.py  gate.py  high_performance.py  interactive_report.py  interactive_viz.py  io 2.py  io.py  launcher.py  log_config.py  ml_plugins.py  model.py  pipeline.py  provenance.py  py.typed  qc 2.py  qc.py  realtime.py  report.py  report_generator.py  scaffold.py  security.py  stats 2.py  utils.py  validation.py  viz.py  viz_3d.py
src/cytoflow_qc/plugins/: __init__.py  base.py  gating.py  registry.py  stats.py
src/cytoflow_qc/plugins/examples/: custom_gating.py  custom_qc.py  custom_stats.py
src/cytoflow_qc/templates/cookiecutter-cytoflow-qc-plugin/: cookiecutter.json
src/cytoflow_qc/templates/cookiecutter-cytoflow-qc-plugin/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
src/cytoflow_qc/templates/cookiecutter-cytoflow-qc-plugin/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: gating.py
tests/: conftest.py  dvc.yaml  test_benchmarks.py  test_cli.py  test_compensate.py  test_data_connectors.py  test_data_generation.py  test_drift 2.py  test_experiment_design.py  test_integration.py  test_launcher.py  test_plugins.py  test_property_based.py  test_security.py  test_visuals.py
