[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cytoflow-qc-custom-gating"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "An example custom gating strategy for CytoFlow-QC."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."cytoflow_qc.gating_strategies"]
custom_density = "cytoflow_qc_custom_gating.gating:CustomDensityGating"
