[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" },
]
description = "A custom plugin for CytoFlow-QC."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."cytoflow_qc.gating_strategies"]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.gating:{{ cookiecutter.plugin_name.replace(' ', '') }}Plugin"
